<resources>
    <string name="app_name">Mensaplan</string>
    <string name="mealPrizeLabel">Prize:</string>
    <string name="mealPricesPlaceholder">Preise:</string>
    <string name="mealImageContentDescription">Ein Icon das die Kategorie des jeweiligen Gerichtes bildlich darstellt.</string>
    <string name="mealNameDefault">Gerichtname</string>
    <string name="studentPrizeDefault">Studenten:</string>
    <string name="guestPrizeDefault">Gäste:</string>
    <string name="employeePrizeDefault">Angestellte:</string>
    <string name="cancelButtonText">Close</string>
    <string name="tabItem1">Mon</string>
    <string name="tabItem2">Tue</string>
    <string name="tabItem3">Wed</string>
    <string name="tabItem4">Thu</string>
    <string name="tabItem5">Fri</string>
    <string name="subscribeText">Als Favorit hinzufügen</string>
    <string name="unsubscribeText">Als Favorit entfernen</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="register_button_label">Nock kein Kunde? Register</string>
    <string name="oth_logo">OTH-Logo</string>
    <string name="email_input_hint">Email</string>
    <string name="passwort_input_hint">Passwort</string>
    <string name="login_button_label">Login</string>
    <string name="check_password_input_label">Passwort bestätigen</string>
    <string name="username_input_label">Username</string>
    <string name="registerscreen_button_label">Registrieren</string>
    <string name="like_string">✓</string>
    <string name="dislike_string">×</string>
    <string name="logout_button_string">Logout</string>
    <string name="meal_tab_label">Gerichte</string>
    <string name="favorites_tab_label">Favoriten</string>
    <string name="history_tab_label">History</string>
    <string name="account_tab_label">Account</string>
</resources>
