<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/meals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem2" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem3" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem4" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem5" />
    </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>