<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="25dp"
    android:layout_marginRight="25dp"
    android:minHeight="150dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/mealImageContentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[14]" />

        <TextView
            android:id="@+id/meal_name_label"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/mealNameDefault"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/meal_image"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/meal_image"
            app:layout_constraintTop_toBottomOf="@+id/meal_name_label">

            <TextView
                android:id="@+id/like_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_string"
                android:textColor="#0096FF"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/like_label_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/meal_name_label">

            <TextView
                android:id="@+id/dislike_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dislike_string"
                android:textColor="#FF2600"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/dislike_label_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>